--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 		
 <h1>Forest of Mushroom Elm</h1>
 		<p style="color:green;">The sunlight casts its glow through the leaves of the forest realm. Alighting lightly down on all who live in the kingdom of Mushroom Elms</p>
+		<img src="forest.jpg" alt="Forestwith light cascading through trees">
 <h2>Under the Heavy Ferns</h2>
+		<img src="mushroomhouse.jpg" alt="Home made to look like a mushroom">
 		<p title="I am a paragraph">Here the residents rest lazily in peace under the broad leaves. When suddenly a prim and proper lady <b>squeaks</b> with sudden <i>unease!</i></p>
 <h3>A Suprise Indeed</h3>
 <p>There upon her shoulder a little forest dweller peeks. They all relax when they realize that a bit of companionship is all the small one seeks.</p>
